# AI-Student-Assistant

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  template.py
src/components/: doubt_solver.py  quiz_generator.py  roadmap_creator.py
src/utils/: ingest.py
vector_store/: index.faiss  index.pkl
